# python-install

./: .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: checks.yml
install/: __init__.py  __main__.py
install/_vendor/: __init__.py
