[build-system]
requires = ['flit_core >=2,<3']
build-backend = 'flit_core.buildapi'

[tool.flit.metadata]
module = 'install'
author = 'Filipe Laíns'
author-email = 'lains@archlinux.org'
home-page = 'https://github.com/FFY00/python-build'
description-file = 'README.md'
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
]
requires = [
    'installer'
]
