[metadata]
name = python-install
version = 0.0.3
long_description = file: README.md
long_description_content_type = text/markdown
author = Filipe Laíns
author_email = lains@riseup.org
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Intended Audience :: Developers
project_urls =
    homepage = https://github.com/FFY00/python-install

[options]
packages =
    install
    install._vendor
    install._vendor.installer.src.installer
    install._vendor.installer.src.installer._compat
    install._vendor.installer.src.installer._scripts

[options.extras_require]
dependency-checking =
    packaging
    importlib-metadata ; python_version < '3.8'

[flake8]
max-line-length = 127
max-complexity = 10

[mypy]
ignore_missing_imports = True
strict = True

[isort]
line_length = 127
lines_between_types = 1
lines_after_imports = 2
known_first_party = install
